--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
+    "expo-image-picker-multiple": "^1.4.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -30,7 +31,10 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "unimodules-permissions-interface": "^6.1.0",
+    "expo-camera": "~11.0.2",
+    "expo-file-system": "~11.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
