--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-camera": "~11.0.2",
+    "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-image-picker-multiple": "^1.4.1",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -32,9 +35,9 @@
     "react-native-svg": "^12.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12",
-    "unimodules-permissions-interface": "^6.1.0",
-    "expo-camera": "~11.0.2",
-    "expo-file-system": "~11.0.2"
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "unimodules-permissions-interface": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
