--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-image-picker-multiple": "^1.4.1",
+    "expo-media-library": "~12.0.2",
     "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
