--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@svgr/cli": "^5.5.0"
+    "@svgr/cli": "^5.5.0",
+    "expo-cli": "^4.12.0"
   },
   "private": true
 }
