--- a/app.json
+++ b/app.json
@@ -18,7 +18,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.colorfavor.nehliudov"
+      "bundleIdentifier": "com.colorfavor.nehliudov",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Bu uygulama Aile kaydına resim eklemek için kamerayı kullanmaktadır."
+      }
     },
     "android": {
       "adaptiveIcon": {
