--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "unimodules-permissions-interface": "^6.1.0"
+    "unimodules-permissions-interface": "^6.1.0",
+    "expo-updates": "~0.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
