--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "svgr": "svgr ./src/icons -d ./src/components/icons --native --svg-props 'className=' --svgo-config .svgorc.json"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "1.9.11",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.9",
     "base-64": "^1.0.0",
-    "expo": "~41.0.1",
-    "expo-app-loading": "^1.0.3",
-    "expo-camera": "~11.0.2",
-    "expo-file-system": "~11.0.2",
-    "expo-font": "~9.1.0",
+    "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
+    "expo-file-system": "~14.0.0",
+    "expo-font": "~10.1.0",
     "expo-image-picker-multiple": "^1.4.1",
-    "expo-media-library": "~12.0.2",
-    "expo-secure-store": "~10.1.0",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-floating-label-input": "^1.3.11",
-    "react-native-gesture-handler": "~1.10.2",
+    "expo-media-library": "~14.1.0",
+    "expo-secure-store": "~11.2.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.8.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.7",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "unimodules-permissions-interface": "^6.1.0",
-    "expo-updates": "~0.5.4"
+    "unimodules-permissions-interface": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.9",
     "@svgr/cli": "^5.5.0",
     "expo-cli": "^4.12.0"
   },
-  "private": true
+  "private": true,
+  "name": "nehliudov",
+  "version": "1.0.0"
 }
