--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "@unimodules/core": "^7.1.2",
-    "@unimodules/react-native-adapter": "^6.3.9",
     "base-64": "^1.0.0",
     "expo": "^45.0.0",
     "expo-camera": "~12.2.0",
     "expo-file-system": "~14.0.0",
     "expo-font": "~10.1.0",
     "expo-image-picker-multiple": "^1.4.1",
-    "expo-media-library": "~14.1.0",
+    "expo-intent-launcher": "^10.2.0",
+    "expo-network": "~4.2.0",
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -38,6 +37,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-unimodules": "^0.14.10",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
